End of class version

--- a/index.html
+++ b/index.html
@@ -10,19 +10,29 @@
     <body>
 
         <main>
+            <header>
+                <h1>Seattle Water Supply</h1>
+                <p>Water Without Compromise!</p>
+            </header>
+            <section>
+                <p>Bacon ipsum dolor sit amet in ball tip nulla, kielbasa veniam incididunt porchetta culpa ex in pork loin. Ribeye pig pancetta veniam jowl. Ham hock kevin reprehenderit t-bone, tri-tip in nisi. Ribeye pork belly minim aute eiusmod cillum. In laborum tenderloin tempor. Pork chop aliquip ut, dolore consequat enim magna pastrami elit nostrud sint do. Pastrami excepteur enim nisi bresaola, ball tip spare ribs short ribs veniam cow in proident meatloaf.</p>
 
-            <h1>CSS Demo</h1>
+                <p>Boudin ham hock corned beef adipisicing t-bone pork aliqua. Ut in kielbasa, velit quis short loin elit shankle cupidatat chicken drumstick pastrami doner ut. Pork ut incididunt et. Id dolore brisket strip steak drumstick do sint pork. Mollit bacon shankle ut bresaola, ground round ribeye sed eu.</p>
+            </section>
+            <section class="mission">
+                <h2>Our Mission</h2>
+                <p>Cupidatat drumstick esse ribeye pork loin eiusmod kevin pancetta. Swine in ground round, short loin laboris ham hock minim esse turkey brisket deserunt. T-bone velit fugiat aliqua turkey, cillum dolore kevin adipisicing. Nisi corned beef est jowl doner sirloin. Sunt aliquip in, est tenderloin qui fatback ut ham ut. Leberkas elit qui ball tip, rump aliquip short ribs boudin eiusmod dolor pig culpa.</p>
 
-            <p>Bacon ipsum dolor sit amet in ball tip nulla, kielbasa veniam incididunt porchetta culpa ex in pork loin. Ribeye pig pancetta veniam jowl. Ham hock kevin reprehenderit t-bone, tri-tip in nisi. Ribeye pork belly minim aute eiusmod cillum. In laborum tenderloin tempor. Pork chop aliquip ut, dolore consequat enim magna pastrami elit nostrud sint do. Pastrami excepteur enim nisi bresaola, ball tip spare ribs short ribs veniam cow in proident meatloaf.</p>
+                <p>Drumstick anim frankfurter in ex qui pastrami mollit boudin, pig proident quis cupidatat. Voluptate flank tempor, brisket aliquip est ut nisi duis. Id anim tail culpa. Capicola do qui, ad rump ham duis in chuck consectetur brisket. Enim mollit salami ullamco officia hamburger tongue tenderloin aliqua ad deserunt. Reprehenderit shoulder shankle eiusmod deserunt anim bacon chuck dolore id.</p>
+            </section>
+            <section>
+                <p>Jowl id ut meatball esse officia pig, nulla veniam leberkas minim ground round. Sint beef ribs flank bacon short loin pork chop. Flank cow culpa, kielbasa ad t-bone commodo. Frankfurter chuck leberkas exercitation tenderloin veniam ball tip pastrami. Enim non biltong, irure leberkas cupidatat in andouille jowl tail. Labore adipisicing ut frankfurter landjaeger pig. Bacon chuck voluptate sed, shankle et pancetta tempor t-bone ut.</p>
+            </section>
 
-            <p>Boudin ham hock corned beef adipisicing t-bone pork aliqua. Ut in kielbasa, velit quis short loin elit shankle cupidatat chicken drumstick pastrami doner ut. Pork ut incididunt et. Id dolore brisket strip steak drumstick do sint pork. Mollit bacon shankle ut bresaola, ground round ribeye sed eu.</p>
-
-            <p>Cupidatat drumstick esse ribeye pork loin eiusmod kevin pancetta. Swine in ground round, short loin laboris ham hock minim esse turkey brisket deserunt. T-bone velit fugiat aliqua turkey, cillum dolore kevin adipisicing. Nisi corned beef est jowl doner sirloin. Sunt aliquip in, est tenderloin qui fatback ut ham ut. Leberkas elit qui ball tip, rump aliquip short ribs boudin eiusmod dolor pig culpa.</p>
-
-            <p>Drumstick anim frankfurter in ex qui pastrami mollit boudin, pig proident quis cupidatat. Voluptate flank tempor, brisket aliquip est ut nisi duis. Id anim tail culpa. Capicola do qui, ad rump ham duis in chuck consectetur brisket. Enim mollit salami ullamco officia hamburger tongue tenderloin aliqua ad deserunt. Reprehenderit shoulder shankle eiusmod deserunt anim bacon chuck dolore id.</p>
-
-            <p>Jowl id ut meatball esse officia pig, nulla veniam leberkas minim ground round. Sint beef ribs flank bacon short loin pork chop. Flank cow culpa, kielbasa ad t-bone commodo. Frankfurter chuck leberkas exercitation tenderloin veniam ball tip pastrami. Enim non biltong, irure leberkas cupidatat in andouille jowl tail. Labore adipisicing ut frankfurter landjaeger pig. Bacon chuck voluptate sed, shankle et pancetta tempor t-bone ut.</p>
-
+            <footer>
+                <p>&copy; 2014 Ivy</p>
+            </footer>
         </main>
+
     </body>
 </html>
